api work and external idp auth

--- a/aws/api/lib/data/app/views/index.ejs
+++ b/aws/api/lib/data/app/views/index.ejs
@@ -7,7 +7,7 @@
 
     <body>
         <h1>My Serverless Application</h1>
-        <p>Test Addition</p>
+        <p><%= renderValue %></p>
     </body>
 
 </html>
